--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -76,9 +76,6 @@
           <p>
             <strong>Role:</strong> <span id="role-display">Loading...</span>
           </p>
-          <p>
-            <strong>Link:</strong> <span id="link-display">Loading...</span>
-          </p>
         </div>
 
         <!-- Sheet Connection Status -->
@@ -133,6 +130,6 @@
       <div id="status" class="status hidden"></div>
     </div>
 
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
   </body>
 </html>
