Added new dropdown for Saved but not applied application

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -94,6 +94,7 @@
           <div class="form-group">
             <label for="stage">Application Stage:</label>
             <select id="stage" required>
+              <option value="Saved" selected>Saved</option>
               <option value="Applied" selected>Applied</option>
               <option value="Interviewing">Interviewing</option>
               <option value="Ghosted">Ghosted</option>
